pkg/lang/syntax/testdata/ub/invalid/duplicate-fields/factory/action-body.ub
factory: {
  actions: {
    run: std.exec {
      command: 'one'
      command: 'two'
    }
  }
}
